# gatk-faster-rnaseq-germline-snps-indels

./: .gitignore  AGENTS.md  README.md  build.md  design.md  gatk-faster-rnaseq-germline-snps-indels.py
development/: 2026-06-15.standard-pipeline-and-sambamba-plan.md  2026-06-16.baseline-sambamba-benchmark.md  2026-06-16.gatk-haplotypecaller-core-algorithm.md  2026-06-16.gatk-hc-rerun-and-rust-current-comparison.md  2026-06-16.optimization-roadmap.md  2026-06-16.rust-apply-bqsr-module.md  2026-06-16.rust-base-recalibrator-module.md  2026-06-16.rust-bin-auto-fallback-and-downstream-benchmark.md  2026-06-16.rust-hc-prefilter-validation.md  2026-06-16.rust-interval-tools-module.md  2026-06-16.rust-mark-duplicates-module.md  2026-06-16.rust-split-n-cigar-reads-v1.md  2026-06-16.step-script-real-data-validation.md  2026-06-16.step-script-refactor.md  2026-06-17.active-region-capping-and-annotations-comparison.md  2026-06-17.claude-hc-followup-brief.md  2026-06-17.claude-hc-followup-result.md  2026-06-17.claude-hc-implementation-brief.md  2026-06-17.concrete-implementation-plan.md  2026-06-17.current-vcf-difference-analysis-and-improvement-plan.md  2026-06-17.good-compare-automation.md  2026-06-17.good-compare-postprocess.zsh  2026-06-17.good-set-filter-correction.md  2026-06-17.good-set-sample-annotate.zsh  2026-06-17.hc-active-region-grouping.md  2026-06-17.hc-active-region-span-diagnostics.md  2026-06-17.hc-allele-marginalization.md  2026-06-17.hc-assembly-read-subset-consistency.md  2026-06-17.hc-base-quality-threshold-handling.md  (+54 more)
src/rust/: Cargo.toml
src/rust/.cargo/: config.toml
src/rust/cli/: rust_base_recalibrator.rs  rust_haplotype_caller.rs  rust_hc_acceptance_report.rs  rust_hc_active_region_diff.rs  rust_hc_assembly_diff.rs  rust_hc_pairhmm_diff.rs  rust_hc_prefilter.rs  rust_hc_read_finalize_diff.rs  rust_hc_run_gatk_oracle.rs  rust_interval_tools.rs  rust_mark_duplicates.rs
src/rust/src/: assembly.rs  gatk_oracle.rs  haplotype_caller.rs  hc_prefilter.rs  hc_tools.rs  interval_tools.rs  lib.rs  mark_duplicates.rs  pair_hmm.rs  smith_waterman.rs  split_n_cigar.rs
src/rust/src/apply_bqsr/: mod.rs  model.rs  tests_block.rs
src/rust/src/base_recalibrator/: mod.rs  reporting.rs  tests_block.rs  work_units.rs
src/rust/src/haplotype_caller/: activity.rs  alignment.rs  candidate_events.rs  evidence.rs  genotyping.rs  mod.rs  replay_io.rs  tests_block.rs  tests_part1.rs  tests_part2.rs
src/rust/src/hc/: activity.rs  align.rs  annotation.rs  args.rs  assembly.rs  filters.rs  genotype.rs  gvcf.rs  io.rs  likelihood.rs  mod.rs  scheduler.rs
src/rust/src/hc_tools/: debug_tools.rs  mod.rs  stage_diff.rs  tests_block.rs  vcf_compare.rs  vcf_helpers.rs
src/rust/src/split_n_cigar/: mod.rs  split_logic.rs  tests_block.rs  transform.rs
(+35 files in other folders)
