[package]
name = "gatk-faster-rnaseq-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust_apply_bqsr"
path = "cli/rust_apply_bqsr.rs"

[[bin]]
name = "rust_hc_prefilter"
path = "cli/rust_hc_prefilter.rs"

[[bin]]
name = "rust_haplotype_caller"
path = "cli/rust_haplotype_caller.rs"

[[bin]]
name = "rust_base_recalibrator"
path = "cli/rust_base_recalibrator.rs"

[[bin]]
name = "rust_mark_duplicates"
path = "cli/rust_mark_duplicates.rs"

[[bin]]
name = "rust_split_n_cigar_reads"
path = "cli/rust_split_n_cigar_reads.rs"

[[bin]]
name = "rust_interval_tools"
path = "cli/rust_interval_tools.rs"

[[bin]]
name = "rust_hc_vcf_compare"
path = "cli/rust_hc_vcf_compare.rs"

[[bin]]
name = "rust_hc_select_regions"
path = "cli/rust_hc_select_regions.rs"

[[bin]]
name = "rust_hc_run_gatk_oracle"
path = "cli/rust_hc_run_gatk_oracle.rs"

[[bin]]
name = "rust_hc_gatk_debug_extract"
path = "cli/rust_hc_gatk_debug_extract.rs"

[[bin]]
name = "rust_hc_region_replay"
path = "cli/rust_hc_region_replay.rs"

[[bin]]
name = "rust_hc_vcf_to_genotype_table"
path = "cli/rust_hc_vcf_to_genotype_table.rs"

[[bin]]
name = "rust_hc_active_region_diff"
path = "cli/rust_hc_active_region_diff.rs"

[[bin]]
name = "rust_hc_read_finalize_diff"
path = "cli/rust_hc_read_finalize_diff.rs"

[[bin]]
name = "rust_hc_assembly_diff"
path = "cli/rust_hc_assembly_diff.rs"

[[bin]]
name = "rust_hc_pairhmm_diff"
path = "cli/rust_hc_pairhmm_diff.rs"

[[bin]]
name = "rust_hc_genotype_diff"
path = "cli/rust_hc_genotype_diff.rs"

[[bin]]
name = "rust_hc_acceptance_report"
path = "cli/rust_hc_acceptance_report.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
rayon = "1.10"
rust-htslib = { version = "1.0.0", default-features = false }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
